# pyveda

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_STATUS.md  LICENSE  NEXT_STEPS.md  README.md  ci_final_results.txt  pyproject.toml  pytest.ini  rename_project.sh  rename_to_vedart.sh  run_ci_tests.sh  verify_implementation.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  publish.yml  release.yml
benchmarks/: basic_benchmark.py  compare_frameworks.py  results.md  scaling_benchmark.py
docs/: TEST_RESULTS.md  api_reference.md  architecture.md  brief.md  gpu_guide.md  guarantees.md  index.md  quickstart.md  telemetry.md
examples/: 01_hello_parallel.py  02_scoped_execution.py  03_gpu_matrix_ops.py  04_telemetry.py  05_deterministic_debug.py  06_data_pipeline.py  07_configuration.py  08_etl_pipeline.py  08_ml_pipeline.py  09_async_integration.py  10_image_processing.py  11_io_pipeline_async.py  12_error_handling.py
examples/notebooks/: deterministic_debugging.ipynb
examples/plugins/: README.md  custom_executor.py
src/pyveda/: __init__.py  __version__.py  config.py  exceptions.py  types.py
src/pyveda/core/: __init__.py  context.py  executor.py  runtime.py  scheduler.py  scope.py  task.py
src/pyveda/deterministic/: __init__.py  replay.py  scheduler.py
src/pyveda/executors/: __init__.py  async_executor.py  process_pool.py  thread_pool.py
src/pyveda/gpu/: __init__.py  backend.py  decorators.py  executor.py  memory.py
src/pyveda/iter/: __init__.py  parallel.py
src/pyveda/telemetry/: __init__.py  export.py  metrics.py  tracing.py
src/pyveda/utils/: __init__.py  serialization.py  system.py
src/vedart/: __init__.py  __version__.py  config.py  exceptions.py  types.py
src/vedart/core/: __init__.py  executor.py  heuristics.py  runtime.py  scheduler.py  scope.py
src/vedart/deterministic/: __init__.py  (+2 more)
tests/: conftest.py
tests/integration/: test_async_integration.py  test_end_to_end.py  test_gpu_integration.py  test_real_workloads.py
tests/stress/: test_concurrency.py  test_high_load.py  test_memory_leak.py
tests/unit/: test_async_map.py  test_config.py  test_deterministic.py  test_error_handling.py  test_gpu.py  test_iterators.py  test_scheduler.py  test_scope.py  test_scope_errors.py  test_task.py  test_telemetry.py
(+17 files in other folders)
